# postmarketos-lvgl-nexus5

./: .gitmodules  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
include/: lv_conf.h  lv_drv_conf.h  lv_ex_conf.h
lib/: CMakeLists.txt
lib/lv_demos/: CMakeLists.txt
lib/lv_drivers/: CMakeLists.txt
src/: CMakeLists.txt  main.c
